--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -3,6 +3,18 @@ layout: default
 ---
 <div id="post">
 <div style="float:right"><a href="https://plus.google.com/{{ page.google_plus }}?rel=author"><class="post-author">By: {{ page.author_name }}</a></div>
+
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style ">
+<a class="addthis_button_facebook"></a>
+<a class="addthis_button_twitter"></a>
+<a class="addthis_button_email"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
+<a class="addthis_button_google_plusone"></a>
+</div>
+<div style="float:left"><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f4f2b211c2d0f54"></script></div>
+
 {{ content }}
 </div>
 
