added main site to top header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@ var WRInitTime=(new Date()).getTime();
 <div class="site">
   <div class="title">
     <a href="/">Crosslives Blog</a>
+    <a class="extra" href="http://crosslives.com">Main Site</a>
     <a class="extra" href="/">home</a>
   </div>
   
