changed to lowercase

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@ var WRInitTime=(new Date()).getTime();
 <div class="site">
   <div class="title">
     <a href="/">Crosslives Blog</a>
-    <a class="extra" href="http://crosslives.com">Main Site</a>
-    <a class="extra" href="/">home</a>
+    <a class="extra" href="/">blog home</a>
+    <a class="extra" href="http://crosslives.com">crosslives</a>
   </div>
   
   {{ content }}
