added title to blog posts

--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<h1 class="post-title">{{ page.title }}</h1>
 <div id="post">
 <div style="float:right"><a href="https://plus.google.com/{{ page.google_plus }}?rel=author"><class="post-author">By: {{ page.author_name }}</a></div>
 
